Implemented TinyQueue to avoid dropping packets if buffer is full. Packets will be retried once a new packet send is required

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "win32"
   ],
   "dependencies": {
-    "debug": "~2.2.0"
+    "debug": "~2.2.0",
+    "tinyqueue": "^1.2.3"
   },
   "optionalDependencies": {
     "bluetooth-hci-socket": "^0.5.1",
