Replaced TinyQue by a pure JS FIFO queue

--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "win32"
   ],
   "dependencies": {
-    "debug": "~2.2.0",
-    "tinyqueue": "^1.2.3"
+    "debug": "~2.2.0"
   },
   "optionalDependencies": {
     "bluetooth-hci-socket": "^0.5.1",
